--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ table{
 #resultTable{
     width: 800px;
     border: 1px solid gray;
+    background-color:#ccc;
     
 
 }
@@ -40,12 +41,13 @@ width:450px;
     width:50px;
 }
 
-#resTd1{
+tr:nth-of-type(odd) {
+    background-color:white;
+  }
 
+.hide{
+    display:none;
 }
-
-
-
 
 
 th,td{
